# EpsAvlc_toys

./: .gitignore  .gitmodules  readme.md
BA_exercise/: CMakeLists.txt  g2o_ba.cpp  readme.md
BA_exercise/cmake/: FindG2O.cmake
BA_exercise/include/: ba_solver.h  bal_parser.h  common.h
BA_exercise/lib/: bal_parser.cpp  common.cpp
autodiff/: CMakeLists.txt  demo.cpp
b_spline/: CMakeLists.txt  demo.cpp
b_spline/b_spline/: b_spline.cpp  b_spline.h
cuda_raycaster/: cuda_hashtable.cu  cuda_ray_caster.cu
cuda_raycaster/include/: cuda_hashtable.h  cuda_ray_caster.h
fisheye_to_pinhole/: .gitignore  CMakeLists.txt  package.xml  readme.md
fisheye_to_pinhole/config/: cam0.yaml  cam1.yaml
fisheye_to_pinhole/launch/: eyepulator_camera.launch  fisheye_to_camera.launch
fisheye_to_pinhole/src/: fisheye_to_pinhole.cpp  save_img.cpp
float_to_float/: CMakeLists.txt  main.cpp
hungary_optimizer/: CMakeLists.txt  hungary_optimizer.h  test.cpp
image_stitching/: CMakeLists.txt  main.cpp  readme.md
linear_algebra/: CMakeLists.txt
linear_algebra/src/: lu_decompose.cpp
ndt_registration/: .clang-format  CMakeLists.txt
ndt_registration/src/: main.cpp
quaternion_jacobian/: CMakeLists.txt  main.cpp  pose_local_parameterization.cpp  pose_local_parameterization.h
sliding_grid/: .clang-format  readme.md  xmake.lua
sliding_grid/demo/: demo2d.cpp
sliding_grid/include/sliding_grid/: auto_sliding_grid_map.h  auto_sliding_octomap.h  global.h  grid_map.h  (+1 more)
sliding_grid/tests/: test.cpp
stereo_reconstruction/: .gitignore  CMakeLists.txt  readme.md
stereo_reconstruction/include/stereo_reconstruction/: stereo_reconstruction.h
stereo_reconstruction/src/: main.cpp  stereo_reconstruction.cpp
